added dashboard and patches

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,7 +22,7 @@
      <h1 class="text-center" data-text="Log In">Log In</h1>
      <p class="text-center">Log in to resume !</p>
      </div>
-     <form method="post">
+     <form method="post" action="/api/auth/login">
       <!-- Full Name -->
       <!-- <div class="input-group">
         <input type="text" id="fullname" name="fullname" placeholder=" " required>
